# osisp_cource-work

./: .gitignore  README.md
src/: BatchParser.cpp  CMakeLists.txt  CMakeSettings.json  ConsoleInterface.cpp  Dispatcher.cpp  ExternalTool.cpp  FileTask.cpp  ThreadPool.cpp  dirwalk.c  main.c  main.cpp
src/header/: BatchParser.h  ConsoleInterface.h  Dispatcher.h  ExternalTool.h  FileTask.h  ThreadPool.h  dirwalk.h  libs.h
